# HomeWork_19.1

./: .gitignore  README.md  index.html  pyproject.toml
HomeWork_Django_19.1/: pyproject.toml
