[tool.poetry]
name = "homework-django-19-1"
version = "0.1.0"
description = "HomeWork_Django_19.1"
authors = ["mrxsky <wwhskynet@icloud.com>"]
readme = "README.md"
packages = [{include = "homework_django_19"}]

[tool.poetry.dependencies]
python = "3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
